--- a/playbooks/devstack.yml
+++ b/playbooks/devstack.yml
@@ -57,22 +57,22 @@
       create: yes
     become: true
 
-#    - name: Always connect as stack user
-#      blockinfile:
-#        name: ~/.bashrc
-#        state: present
-#        block: |
-#        sudo su stack
-#
-#  - name: Source OS env at stack connection
-#    blockinfile:
-#      name: ~/.bashrc
-#      state: present
-#      block: |
-#        . /opt/stack/devstack/openrc admin admin
-#        cd ~
-#    become: true
-#    become_user: stack
+  - name: Always connect as stack user
+    blockinfile:
+      name: ~/.bashrc
+      state: present
+      block: |
+        sudo su stack
+
+  - name: Source OS env at stack connection
+    blockinfile:
+      name: ~/.bashrc
+      state: present
+      block: |
+        . /opt/stack/devstack/openrc admin admin
+        cd ~
+    become: true
+    become_user: stack
 
   - name: Clone Devstack in /opt/stack/devstack
     git:
@@ -99,18 +99,14 @@
         LIBVIRT_TYPE=qemu
         IP_VERSION=4
         ENABLE_IDENTITY_V2=False
+        USE_PYTHON3=True
         HOST_IP={{ os_ip }}
         SERVICE_HOST=$HOST_IP
         REGION_NAME={{ os_name }}
         KEYSTONE_REGION_NAME={{ os_name }}
-
         LIBS_FROM_GIT=keystoneauth
         KEYSTONEAUTH_REPO=https://github.com/BeyondTheClouds/keystoneauth.git
         KEYSTONEAUTH_BRANCH=stable/stein
-
-        USE_PYTHON3=True
-        # OSLODB_REPO=https://github.com/BeyondTheClouds/oslo.db
-        # OSLODB_BRANCH=cockroachdb/pike
 
         # Note: Find services in $ENABLED_SERVICES
         disable_service c-api
@@ -118,6 +114,7 @@
         disable_service c-vol
         disable_service horizon
         disable_service tempest
+        disable_service etcd
 
         # enable_plugin rally https://github.com/openstack/rally master
 
