Update setup conf + Remove useless scripts

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,7 @@ include_package_data = True
 install_requires =
     requests
     six
+    dataclasses
 
 [options.entry_points]
 openstack.cli.base =
