--- a/setup.cfg
+++ b/setup.cfg
@@ -41,7 +41,7 @@ install_requires =
 
 [options.entry_points]
 openstack.cli.base =
-    openstackoid=openstackoid.client
+    openstackoid=openstackoid.shell
 
 [options.packages.find]
 exclude =
